tests/should-fail/rawcodes/rawcodelit-13.j
globals
    integer q = '\xabc'
endglobals